# infer_platform

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml
cmd/api-gateway/: .env.example  main.go
cmd/node-agent/: .env.example  main.go
crates/api-gateway/: .env.example  Cargo.toml
crates/api-gateway/migrations/: 001_initial.sql  002_node_health.sql  003_billing.sql  004_node_models.sql
crates/api-gateway/src/: auth.rs  billing.rs  billing_cron.rs  cache.rs  db.rs  health_monitor.rs  license.rs  main.rs  models.rs  nodes.rs  sanitize.rs  shard_coordinator.rs  stale_nodes.rs  state.rs
crates/api-gateway/src/routes/: billing.rs  chat.rs  consumer.rs  health.rs  keys.rs  licenses.rs  mod.rs  models.rs  nodes.rs  provider.rs  usage.rs
crates/node-agent/: .env.example  Cargo.toml
crates/node-agent/src/: hardware.rs  infer_cli.rs  main.rs  registration.rs  shard.rs
crates/shard-planner/: Cargo.toml
crates/shard-planner/src/: lib.rs  planner.rs  registry.rs
docs/: RFC-001-single-node-model-routing.md  e2e-local-testing-manual.md  e2e-real-ollama-step-by-step.md  functional-spec.md  implementation-plan-bun.md  runtime-change-summary-bun.md  technical-spec.md
docs/instructions/: README.md  cli-internal-mvp.md
docs/proposals/: npm-cli-functional-spec.md  npm-cli-go-binary-proposal.md  npm-cli-technical-spec.md
fly/bore-server/: Dockerfile  fly.toml
infer-cli/: package.json  tsconfig.json
infer-cli/src/: cli.ts
infer-cli/src/commands/: doctor.ts  logs.ts  run.ts  status.ts  stop.ts
infer-cli/src/lib/: app.ts  args.ts  fs.ts  http.ts  paths.ts  process.ts  runtime.ts
infer-cli/tests/: args.test.ts  config.test.ts
internal/gateway/: billing.go  chat.go  config.go  config_test.go  helpers.go  jobs.go  migrations.go  model_catalog.go  model_router.go  model_router_test.go  nodes.go  nodes_test.go  server.go  stats.go  store.go  types.go
internal/gateway/db/: bun.go  models.go  repo_billing.go  (+4 more)
internal/nodeagent/: nodeagent.go
scripts/: e2e_go_runtime.sh  e2e_go_runtime_real_ollama.sh
web/: package-lock.json  package.json  vercel.json
web/app/: layout.tsx  page.tsx
(+13 files in other folders)
