[workspace]
members = [
    "crates/api-gateway",
    "crates/node-agent",
    "crates/shard-planner",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1"
dotenvy = "0.15"
bytes = "1"
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
