[package]
name = "node-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node-agent"
path = "src/main.rs"

[[bin]]
name = "infer"
path = "src/infer_cli.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
shard-planner = { path = "../shard-planner" }
uuid = { workspace = true }
clap = { workspace = true }
